# Agent-Wiz

./: .env.sample  AutoGen Core_report.md  CONTRIBUTING.md  README.md  agentchat_graph.json  pyproject.toml
examples/: autogen.py
examples/code/openai_agents/: agent.py
examples/output/: crewai_graph.json  langgraph.json  langgraph_graph.json  n8n_graph.json  openai_agents_graph.json  openaiagent_graph.json  openaiagents_graph.json
examples/report/: AgentChat_report.md  AutoGen Core_report.md
frameworks/agent_chat/: mapper.py
frameworks/autogen/: mapper.py
frameworks/crewai/: mapper.py
frameworks/langgraph/: mapper.py
frameworks/llama_index/: mapper.py
frameworks/n8n/: mapper.py
frameworks/openai-agents/: mapper.py
frameworks/pydantic/: mapper.py
frameworks/swarm/: mapper.py
src/agent_shadow/: cli.py
src/agent_shadow/analyzers/: threat_modelling.py
src/agent_shadow/frameworks/agent_chat/: mapper.py
src/agent_shadow/frameworks/autogen/: mapper.py
src/agent_shadow/frameworks/crewai/: mapper.py
src/agent_shadow/frameworks/langgraph/: mapper.py
src/agent_shadow/frameworks/llama_index/: mapper.py
src/agent_shadow/frameworks/openai_agents/: mapper.py
src/agent_shadow/templates/: index.html
src/agent_shadow/visualizers/: visualizer.py
src/agent_wiz/analyzers/: threat_modelling.py
src/agent_wiz/visualizers/: visualizer.py
src/repello_agent_wiz/: cli.py
src/repello_agent_wiz/analyzers/: css.txt  sys_prompt.txt  threat_modelling.py
src/repello_agent_wiz/visualizers/: visualizer.py
template/: index.html
(+3 files in other folders)
