[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-shadow"
version = "0.1.0"
description = "Generate agentic workflows visualizations & threat modelling reports for your agentic projects."
readme = "README.md"
authors = [{ name = "Aryan Ranjan", email = "aryan@repello.ai" }]
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security"
]

dependencies = [
    "openai",
]

[project.scripts]
agent-shadow = "agent_shadow.cli:main"

[project.urls]
"Homepage" = "https://github.com/Repello-AI/ShadowAgent/"
"Bug Tracker" = "https://github.com/Repello-AI/ShadowAgent/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agent_shadow.analyzers" = ["*.txt"]

